#ifndef STATUS_ENUM_H
#define STATUS_ENUM_H

enum class Status : char { BORROWED = 'B', AVAILABLE = 'A', UNAVAILABLE = 'U' };

#endif
